# photo-viewer

./: .gitignore  PhotoViewer.macos.spec  PhotoViewer.spec  README.md  build.sh  flake.nix  main.linux.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
lib/: colors.py  command.py  help_overlay.py  main.py  photo.py  photo_viewer.py  pointed_list.py  state.py
lib/view/: empty_view.py  loading_view.py  single_view.py  wall_view.py
tests/: fixtures.py  test_command.py  test_photo.py  test_photo_viewer.py  test_pointed_list.py  test_single_view.py  test_state.py  test_wall_view.py
