[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-viewer"
version = "0.1.0"
dependencies = [
    "pyside6==6.10.1",
    "pillow==12.0.0",
    "pyobjc-framework-Cocoa==12.1; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
where = ["lib"]
